# tygen

./: .gitignore  Cargo.toml  LICENSE  README.md  example_type.rs  type.rs  types.rs
src/: cli.rs  error.rs  lib.rs  main.rs
src/analyzer/: mod.rs  parser.rs  visitor.rs
src/error/: mod.rs
src/generator/: derive.rs  field.rs  mod.rs  serialization.rs  size.rs  suite.rs
tests/: example_type_test.rs  generated_tests.rs
