[package]
name = "type-tester"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for generating comprehensive tests for Rust types"

[lib]
name = "type_tester"
path = "src/lib.rs"

[[bin]]
name = "type-tester"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
colored = "2.0"
walkdir = "2.4"

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"
